refactor(sorted-set): add default toReversed() to MutableSortedSet; use getFirst/getLast
- Add default MutableSortedSet.toReversed() using SortedSets.mutable.ofAll +
  Collections.reverseOrder, matching the pattern already used in
  ImmutableTreeSet.descendingSet()
- Remove now-redundant toReversed() overrides from TreeSortedSet,
  SortedSetAdapter, and UnmodifiableSortedSet (the UnmodifiableSortedSet
  override was also incorrectly wrapping the result in asUnmodifiable())
- Delegate ImmutableTreeSet.first()/last() to sortedElements.getFirst()/getLast()
  instead of get(0)/get(size-1)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>